# django-start-tool

./: .editorconfig  LICENSE  MANIFEST.in  Makefile  README.rst  setup.cfg
django_start_tool/: handler.py  utils.py
django_start_tool/cli/: main.py
django_start_tool/template/: manage.py-tpl
django_start_tool/template/project_name/: asgi.py-tpl  settings.py-tpl  wsgi.py-tpl
