[metadata]
name = django-start-tool
version = attr: django_start_tool.__version__
author = Georgy Gnezdilov
author_email = georgy.gnezdilov@gmail.com
description = A full-featured CLI for quickly creating django projects.
long_description = file: README.rst
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/solarless/django-start-tool

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    jinja2 >= 3.1.2
    markupsafe >= 2.1.1

[options.entry_points]
console_scripts =
    django-start = django_start_tool.cli.main:main
